--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <source srcset="assets/dd-uk-header-rip-fw.png" media="(min-width: 0px)" type="image/png">
                     <source srcset="assets/dd-uk-header-rip-fw.png" media="(min-width: 0px)" type="image/png">
                     <source srcset="assets/dd-uk-header-rip-fw.png" media="(min-width: 0px)">
-                    <img width="1500" height="90" src="assets/dd-uk-header-rip-fw.png"
+                    <img width="1500" height="90" class="header-rip" src="assets/dd-uk-header-rip-fw.png"
                         alt="Bright green paper tear isolated with a transparent background.">
                 </picture>
             </div>
