added-readme-file
added video for mobile and readme file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Raheem Youth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="raheem-youth.min.css" />
+    <link rel="stylesheet" type="text/css" href="raheem-youth.css" />
     <!-- Link to JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
@@ -103,12 +103,7 @@
 
         <!-- Video Section -->
         <div class="editorial-section editorial-section--video" id="video__container">
-            <video controls playsinline poster="assets/raheem-kids-video-ph-fw.jpeg" preload="none" width="100%"
-                height="auto" class="image--rounded-border">
-                <source src="assets/raheem-bts-landscape.mp4" type="video/mp4">
-                <track kind="captions" src="assets/raheem-bts-video.vtt" srclang="en">
-                Your browser does not support the video tag.
-            </video>
+            <!-- JS will fill this div with portait or landscape video depending on screen size -->
         </div>
 
         <div class="editorial-section raheem-young-video-section">
