--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <!-- Copy HTML from here -->
 
-    <div class="editorial-container">
+    <section class="editorial-container">
 
         <div class="editorial-section raheem-young-header-section">
             <div class="raheem-young-header-svg">
@@ -280,7 +280,7 @@
             <img width="500" height="60" src="assets/dd-uk-clarks-x-rs-signature.png" alt="Clarks | Raheem Sterling">
         </div>
 
-    </div>
+    </section>
 </body>
 <script src="raheem-youth.js"></script>
 
