--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
         <div class="editorial-section raheem-young-header-section">
             <div class="raheem-young-header-svg">
-                <img width="550" height="120" src="assets/dd-uk-raheem-x-clarks.svg" alt="Clarks | Raheem Sterling">
+                <picture>
+                    <img width="550" height="120" src="assets/dd-uk-raheem-x-clarks.svg" alt="Clarks | Raheem Sterling">
+                </picture>
             </div>
 
             <div class="raheem-young-header-rip">
@@ -174,19 +176,27 @@
                         </picture>
                     </div>
                     <div class="raheem-young--sq-bg">
-                        <img width="400" height="75" src="assets/dd-uk-grid-square-bg.png" alt="Squared sheet of paper">
+                        <picture>
+                            <img width="400" height="75" src="assets/dd-uk-grid-square-bg.png" alt="Squared sheet of paper">
+                        </picture>
                     </div>
                     <div class="raheem-young-green-bg">
-                        <img width="350" height="75" src="assets/dd-uk-grid-green-bg.png"
+                        <picture>
+                            <img width="350" height="75" src="assets/dd-uk-grid-green-bg.png"
                             alt="Bright green paper with a ripped paper edge">
+                        </picture>
                     </div>
                     <div class="raheem-young-shoe-2">
-                        <img width="350" height="75" src="assets/dd-uk-grid-item-2-img.png"
+                        <picture>
+                            <img width="350" height="75" src="assets/dd-uk-grid-item-2-img.png"
                             alt="Front of a shoe from the collection">
+                        </picture>
                     </div>
                     <div class="raheem-young-arrows-2">
-                        <img width="400" height="75" src="assets/dd-uk-grid-item-2-arrows.png"
+                        <picture>
+                            <img width="400" height="75" src="assets/dd-uk-grid-item-2-arrows.png"
                             alt="four arrows pointing to the front of the shoe">
+                        </picture>
                     </div>
                 </div>
                 <div class="raheem-young-grid-item--copy-section">
@@ -196,8 +206,10 @@
                             alongside hardwearing rubber outsoles for a super-tough finish that stands up to wear and
                             tear.</p>
                     </div>
-                    <img class="pink-btm-pattern" width="450" height="75" src="assets/dd-uk-pink-btm-design.png"
+                    <picture>
+                        <img class="pink-btm-pattern" width="450" height="75" src="assets/dd-uk-pink-btm-design.png"
                         alt="Pink paper tear isolated with a transparent background">
+                    </picture>
                 </div>
             </li>
 
@@ -214,19 +226,27 @@
                         </picture>
                     </div>
                     <div class="raheem-young--sq-bg">
-                        <img width="400" height="75" src="assets/dd-uk-grid-square-bg.png" alt="Squared sheet of paper">
+                        <picture>
+                            <img width="400" height="75" src="assets/dd-uk-grid-square-bg.png" alt="Squared sheet of paper">
+                        </picture>
                     </div>
                     <div class="raheem-young-green-bg-3">
-                        <img width="350" height="75" src="assets/dd-uk-grid-green-bg.png"
+                        <picture>
+                            <img width="350" height="75" src="assets/dd-uk-grid-green-bg.png"
                             alt="Bright green paper with a ripped paper edge">
+                        </picture>
                     </div>
                     <div class="raheem-young-shoe-3">
-                        <img width="350" height="75" src="assets/dd-uk-grid-item-3-img.png"
+                        <picture>
+                            <img width="350" height="75" src="assets/dd-uk-grid-item-3-img.png"
                             alt="Side view of the sole with a white football ball pattern in the center">
+                        </picture>
                     </div>
                     <div class="raheem-young-arrows-3">
-                        <img width="330" height="75" src="assets/dd-uk-grid-item-3-arrows.png"
+                        <picture>
+                            <img width="330" height="75" src="assets/dd-uk-grid-item-3-arrows.png"
                             alt="four curved lines under the shoe sole">
+                        </picture>
                     </div>
                 </div>
                 <div class="raheem-young-grid-item--copy-section">
@@ -235,8 +255,10 @@
                         <p class="raheem-young__grid-copy" style="margin-bottom: 0;">Built to keep up with action-packed
                             schedules, flex-grooved outsoles bend intuitively with on-the-go feet.</p>
                     </div>
-                    <img class="pink-btm-pattern" width="450" height="75" src="assets/dd-uk-pink-btm-design.png"
+                    <picture>
+                        <img class="pink-btm-pattern" width="450" height="75" src="assets/dd-uk-pink-btm-design.png"
                         alt="Pink paper tear isolated with a transparent background">
+                    </picture>
                 </div>
             </li>
         </ul>
@@ -277,7 +299,9 @@
         </div>
 
         <div class="editorial-section raheem-young--collab-signature">
-            <img width="500" height="60" src="assets/dd-uk-clarks-x-rs-signature.png" alt="Clarks | Raheem Sterling">
+            <picture>
+                <img width="500" height="60" src="assets/dd-uk-clarks-x-rs-signature.png" alt="Clarks | Raheem Sterling">
+            </picture>
         </div>
 
     </section>
